# ResorvoirExperiment

./: CMakeLists.txt  README.md
.qtc_clangd/: compile_commands.json
.qtc_clangd/.cache/clangd/index/: Activation-impl.cpp.2FC73BFABA3A2D82.idx  Activation.hpp.5F5050A6CC4AE1E7.idx  Availability.h.508E0ECAE516CD31.idx  AvailabilityInternal.h.1413462367D6CCEA.idx  AvailabilityInternalLegacy.h.52A06772C29F7FE3.idx  AvailabilityVersions.h.EED9AE84EDEC4A2D.idx  BasicComp.cpp.65DE0BE8CD5718FF.idx  CMakeCCompilerId.c.D5CD38D7D71B4ED0.idx  CMakeCXXCompilerId.cpp.BDCE8A80576B81AD.idx  CMakeCXXCompilerId.cpp.F7F24C781DF127D0.idx  ESN.cpp.1C430E53D74FD61C.idx  ESN.hpp.B538E8B16962B060.idx  LRReadout.cpp.CBF720FF6AA34B44.idx  LRReadout.hpp.8F8B5B717F22C315.idx  Linear.cpp.CC7017F5D991E436.idx  Linear.hpp.946D7C31B72B0944.idx  _OSByteOrder.h.562E14EAF3A80172.idx  _OSByteOrder.h.CAA7B880D325996C.idx  ___wctype.h.31801EB66D223ACC.idx  ___wctype.h.ACB70CDA6CFA0DC7.idx  __assert.C8806CD4B71F97B0.idx  __assertion_handler.823748DA197FD81B.idx  __bit_reference.9ECFBDDEEFAAADDB.idx  __config.2D108650B6E0EB01.idx  __config_site.90F06E47A679D601.idx  __endian.h.75427924E84B6678.idx  __hash_table.273B1914ADD98380.idx  __locale.525CFF2AE84D8395.idx  __mbstate_t.h.4CE663FC7D03BAF7.idx  __node_handle.0D6DACC55A621988.idx  __split_buffer.E03237736B262A1A.idx  __std_mbstate_t.h.15E14AE5ADADCF81.idx  __stdarg___gnuc_va_list.h.75FD86E57EBC09BE.idx  __stdarg___va_copy.h.C1833F580A68C105.idx  __stdarg_header_macro.h.65B6BAC8C365DB01.idx  __stdarg_va_arg.h.755443D4522EFDD1.idx  __stdarg_va_copy.h.5C0283BF2211648D.idx  __stdarg_va_list.h.F886DA15952BF522.idx  __stddef_header_macro.h.4A69C7AE6B2912DD.idx  __stddef_max_align_t.h.939A2C10A1459E1C.idx  (+810 more)
include/ESN1/: Activation-impl.cpp  Activation.hpp  ESN.cpp  ESN.hpp  LRReadout.cpp  LRReadout.hpp  Linear.cpp  Linear.hpp  Tanh-impl.cpp  Tanh.hpp
include/Metrics/: BasicComp.cpp
src/: main.cpp  mainwindow.cpp  mainwindow.h
